hphp/hack/test/typecheck/classname/typename_array_literal_bad.php.like_types.exp
File "typename_array_literal_bad.php", line 10, characters 3-15:
  array<string, (classname<exact D> | typename<I>)>
File "typename_array_literal_bad.php", line 11, characters 10-13:
Invalid return type (Typing[4110])
File "typename_array_literal_bad.php", line 8, characters 28-53:
Expected ~array<string, typename<I>> because it is an unenforceable type
File "typename_array_literal_bad.php", line 9, characters 10-76:
But got array<string, (classname<D> | typename<I>)>
